core/falco/overlays/in-cluster/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    backstage.io/kubernetes-id: falco
    goldilocks.fairwinds.com/enabled: "true"
  name: falco
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: core
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falcosidekick
    app.kubernetes.io/version: 2.28.0
    helm.sh/chart: falcosidekick-0.7.19
  name: falco-falcosidekick
  namespace: falco
spec:
  ports:
  - name: http
    port: 2801
    protocol: TCP
    targetPort: http
  - name: http-notls
    port: 2810
    protocol: TCP
    targetPort: http-notls
  selector:
    app.kubernetes.io/component: core
    app.kubernetes.io/instance: falco
    app.kubernetes.io/name: falcosidekick
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falcosidekick
    app.kubernetes.io/version: 2.28.0
    helm.sh/chart: falcosidekick-0.7.19
  name: falco-falcosidekick-ui
  namespace: falco
spec:
  ports:
  - name: http
    port: 2802
    protocol: TCP
    targetPort: 2802
  selector:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: falco
    app.kubernetes.io/name: falcosidekick
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falcosidekick
    app.kubernetes.io/version: 2.28.0
    helm.sh/chart: falcosidekick-0.7.19
  name: falco-falcosidekick-ui-redis
  namespace: falco
spec:
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app.kubernetes.io/component: ui-redis
    app.kubernetes.io/instance: falco
    app.kubernetes.io/name: falcosidekick
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: metadata-collector
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-metacollector
    app.kubernetes.io/version: 0.1.1
    helm.sh/chart: k8s-metacollector-0.1.8
  name: falco-k8s-metacollector
  namespace: falco
spec:
  ports:
  - name: broker-grpc
    port: 45000
    protocol: TCP
    targetPort: broker-grpc
  - name: health-probe
    port: 8081
    protocol: TCP
    targetPort: health-probe
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/instance: falco
    app.kubernetes.io/name: k8s-metacollector
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: core
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falcosidekick
    app.kubernetes.io/version: 2.28.0
    helm.sh/chart: falcosidekick-0.7.19
  name: falco-falcosidekick
  namespace: falco
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: core
      app.kubernetes.io/instance: falco
      app.kubernetes.io/name: falcosidekick
  template:
    metadata:
      annotations:
        checksum/config: ee89084075949b42d56f17424e300199f7ec955b31587d19992dc0aa515cbefe
      labels:
        app.kubernetes.io/component: core
        app.kubernetes.io/instance: falco
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: falcosidekick
        app.kubernetes.io/part-of: falcosidekick
        app.kubernetes.io/version: 2.28.0
        helm.sh/chart: falcosidekick-0.7.19
    spec:
      containers:
      - env:
        - name: DEBUG
          value: "false"
        - name: CUSTOMFIELDS
          value: ""
        - name: TEMPLATEDFIELDS
          value: ""
        - name: BRACKETREPLACER
          value: ""
        - name: MUTUALTLSFILESPATH
          value: /etc/certs
        - name: MUTUALTLSCLIENT_CERTFILE
          value: ""
        - name: MUTUALTLSCLIENT_KEYFILE
          value: ""
        - name: MUTUALTLSCLIENT_CACERTFILE
          value: ""
        image: docker.io/falcosecurity/falcosidekick:2.28.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
        name: falcosidekick
        ports:
        - containerPort: 2801
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
        resources: {}
      securityContext:
        fsGroup: 1234
        runAsUser: 1234
      serviceAccountName: falco-falcosidekick
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falcosidekick
    app.kubernetes.io/version: 2.28.0
    helm.sh/chart: falcosidekick-0.7.19
  name: falco-falcosidekick-ui
  namespace: falco
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: ui
      app.kubernetes.io/instance: falco
      app.kubernetes.io/name: falcosidekick
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ui
        app.kubernetes.io/instance: falco
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: falcosidekick
        app.kubernetes.io/part-of: falcosidekick
        app.kubernetes.io/version: 2.28.0
        helm.sh/chart: falcosidekick-0.7.19
    spec:
      containers:
      - args:
        - -r
        - falco-falcosidekick-ui-redis:6379
        - -l
        - info
        image: docker.io/falcosecurity/falcosidekick-ui:2.2.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/v1/healthz
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
        name: falcosidekick-ui
        ports:
        - containerPort: 2802
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/v1/healthz
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
        resources: {}
      securityContext:
        fsGroup: 1234
        runAsUser: 1234
      serviceAccountName: falco-falcosidekick-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: metadata-collector
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-metacollector
    app.kubernetes.io/version: 0.1.1
    helm.sh/chart: k8s-metacollector-0.1.8
  name: falco-k8s-metacollector
  namespace: falco
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: falco
      app.kubernetes.io/name: k8s-metacollector
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: falco
        app.kubernetes.io/name: k8s-metacollector
    spec:
      containers:
      - args:
        - run
        command:
        - /meta-collector
        image: docker.io/falcosecurity/k8s-metacollector:0.1.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 45
          periodSeconds: 15
          timeoutSeconds: 5
        name: k8s-metacollector
        ports:
        - containerPort: 45000
          name: broker-grpc
          protocol: TCP
        - containerPort: 8081
          name: health-probe
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 5
        resources: {}
        securityContext:
          capabilities:
            drop:
            - ALL
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: falco-k8s-metacollector
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: ui-redis
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falcosidekick
    app.kubernetes.io/version: 2.28.0
    helm.sh/chart: falcosidekick-0.7.19
  name: falco-falcosidekick-ui-redis
  namespace: falco
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: ui-redis
      app.kubernetes.io/instance: falco
      app.kubernetes.io/name: falcosidekick
  serviceName: falco-falcosidekick-ui-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ui-redis
        app.kubernetes.io/instance: falco
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: falcosidekick
        app.kubernetes.io/part-of: falcosidekick
        app.kubernetes.io/version: 2.28.0
        helm.sh/chart: falcosidekick-0.7.19
    spec:
      containers:
      - args: []
        image: docker.io/redis/redis-stack:6.2.6-v3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 6379
          timeoutSeconds: 2
        name: redis
        ports:
        - containerPort: 6379
          name: redis
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 6379
          timeoutSeconds: 2
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: falco-falcosidekick-ui-redis-data
      serviceAccountName: falco-falcosidekick-ui
  volumeClaimTemplates:
  - metadata:
      name: falco-falcosidekick-ui-redis-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: data-nfs-client
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falco
    app.kubernetes.io/version: 0.38.1
    helm.sh/chart: falco-4.5.1
  name: falco
  namespace: falco
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: falco
      app.kubernetes.io/name: falco
  template:
    metadata:
      annotations:
        checksum/certs: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/config: fede23d7afa9f12ffbabc97f964650f9a92f30d446be7fc7d52e048d8a3bb218
        checksum/rules: 4607bf1194ac038b5722760ac9021f0a21f419313e95e81eeea32fa1fa8b37ba
      labels:
        app.kubernetes.io/instance: falco
        app.kubernetes.io/name: falco
      name: falco
    spec:
      containers:
      - args:
        - /usr/bin/falco
        - --cri
        - /var/run/docker.sock
        - --cri
        - /run/containerd/containerd.sock
        - --cri
        - /run/crio/crio.sock
        - -pk
        image: docker.io/falcosecurity/falco-no-driver:0.38.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8765
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
        name: falco
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8765
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 512Mi
        securityContext:
          privileged: true
        tty: false
        volumeMounts:
        - mountPath: /etc/falco
          name: rulesfiles-install-dir
        - mountPath: /usr/share/falco/plugins
          name: plugins-install-dir
        - mountPath: /root/.falco
          name: root-falco-fs
        - mountPath: /host/proc
          name: proc-fs
        - mountPath: /host/etc
          name: etc-fs
          readOnly: true
        - mountPath: /host/var/run/
          name: docker-socket
        - mountPath: /host/run/containerd/
          name: containerd-socket
        - mountPath: /host/run/crio/
          name: crio-socket
        - mountPath: /etc/falco/falco.yaml
          name: falco-yaml
          subPath: falco.yaml
        - mountPath: /etc/falco/rules.d
          name: rules-volume
      - args:
        - artifact
        - follow
        - --log-format=json
        env: null
        image: docker.io/falcosecurity/falcoctl:0.8.0
        imagePullPolicy: IfNotPresent
        name: falcoctl-artifact-follow
        securityContext: null
        volumeMounts:
        - mountPath: /plugins
          name: plugins-install-dir
        - mountPath: /rulesfiles
          name: rulesfiles-install-dir
        - mountPath: /etc/falcoctl
          name: falcoctl-config-volume
      serviceAccountName: falco
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
      volumes:
      - emptyDir: {}
        name: plugins-install-dir
      - emptyDir: {}
        name: rulesfiles-install-dir
      - emptyDir: {}
        name: root-falco-fs
      - hostPath:
          path: /boot
        name: boot-fs
      - hostPath:
          path: /lib/modules
        name: lib-modules
      - hostPath:
          path: /usr
        name: usr-fs
      - hostPath:
          path: /etc
        name: etc-fs
      - hostPath:
          path: /var/run
        name: docker-socket
      - hostPath:
          path: /run/k0s
        name: containerd-socket
      - hostPath:
          path: /run/crio
        name: crio-socket
      - hostPath:
          path: /proc
        name: proc-fs
      - configMap:
          items:
          - key: falcoctl.yaml
            path: falcoctl.yaml
          name: falco-falcoctl
        name: falcoctl-config-volume
      - configMap:
          items:
          - key: falco.yaml
            path: falco.yaml
          name: falco
        name: falco-yaml
      - configMap:
          name: falco-rules
        name: rules-volume
  updateStrategy:
    type: RollingUpdate
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falcosidekick
    app.kubernetes.io/version: 2.28.0
    helm.sh/chart: falcosidekick-0.7.19
  name: falco-falcosidekick-ui
  namespace: falco
spec:
  ingressClassName: nginx
  rules:
  - host: falcosidekick.k8s.integratn.tech
    http:
      paths:
      - backend:
          service:
            name: falco-falcosidekick-ui
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - falcosidekick.k8s.integratn.tech
    secretName: falcosidekick-tls
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test-success
  labels:
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    helm.sh/chart: falcosidekick-0.7.19
  name: falco-falcosidekick-test-connection
  namespace: falco
spec:
  containers:
  - args:
    - -X
    - POST
    - falco-falcosidekick:2801/ping
    command:
    - curl
    image: appropriate/curl
    name: curl
  restartPolicy: Never
